samples/_failures_safe/1761144140_e2848e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3481e41e.c: In function ‘main’:
./samples/SAFE/__tmp_3481e41e.c:160:25: error: missing terminating " character
  160 |         fprintf(stderr, "Failed to initialize vending machine\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3481e41e.c:160:9: error: expected expression at end of input
  160 |         fprintf(stderr, "Failed to initialize vending machine\n
      |         ^~~~~~~
./samples/SAFE/__tmp_3481e41e.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3481e41e.c:160:9: error: expected declaration or statement at end of input
